--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ title: Blog
   </h2>
 
   <ul class="channel-links js-channel-links">
-    <li><a href="#">Blog</a></li>
-    <li><a href="#">GitHub</a></li>
-    <li><a href="#">Twitter</a></li>
+    <li><a href="/blog">Blog</a></li>
+    <li><a href="https://github.com/nickb1080">GitHub</a></li>
+    <li><a href="https://twitter.com/nickhbottomley">Twitter</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Email</a></li>
+    <li><a href="/contact">Email</a></li>
   </ul>
 
 </div>
