--- a/contact.html
+++ b/contact.html
@@ -2,35 +2,49 @@
 layout: default
 title: Contact
 ---
+
 <div class="email-form js-email-form">
-  <h2>Shoot me an email</h2>
+  <h2 class="section-title">Shoot me an email</h2>
 
   <div class="contact-control">
     <label for="email-subject">Subject</label>
     <input type="text" class="with-focus-effect js-email-subject" id="email-subject">
   </div>
+  
+  <div class="contact-control-pair">
+    
+    <div class="contact-control">
+      <label for="email-from-name">Name</label>
+      <input type="text" class="with-focus-effect js-email-from-name" id="email-from-name">
+    </div>
 
-  <div class="contact-control">
-    <label for="email-from">From</label>
-    <input type="text" class="with-focus-effect js-email-from" id="email-from">
+    <div class="contact-control">
+      <label for="email-from-address">Email Address</label>
+      <input type="text" class="with-focus-effect js-email-from-address" id="email-from-address">
+    </div>
+
   </div>
-
+  
   <div class="contact-control">
     <label for="email-text">Body</label>
     <textarea class="with-focus-effect js-email-text" id="email-text"></textarea>
   </div>
 
-  <button type="button" class="email-send js-email-send">Send</button>
+  <button type="button" class="with-focus-effect email-send js-email-send">Send</button>
+</div>
+
+<div class="response-message loading-message js-loading-message">
+  <div class="status-icon loading-icon">&#8635;</div>
 </div>
 
 <div class="response-message error-message js-error-message">
-  <div class="status-icon"></div>
+  <div class="status-icon error-icon">&#10008;</div>
   <p class="status-message">Something went wrong, sorry about that! Try me on <a href="http://twitter.com/nickhbottomley">Twitter</a>.</p>
 </div>
 
 <div class="response-message success-message js-success-message">
-  <div class="status-icon"></div>
-  <p class="status-message">I'll get back to you ASAP.</p>
+  <div class="status-icon success-icon">&#10004;</div>
+  <p class="status-message">I'll get back to you ASAP. In the meantime, check out my <a href="#">blog</a> or my projects on <a href="#">GitHub</a>.</p>
 </div>
 
 <script src="{{ site.baseurl }}public/js/blog.js"></script>
@@ -48,68 +62,82 @@ title: Contact
 
     var emailForm = $( ".js-email-form" )
     var emailSubject = $( ".js-email-subject" );
-    var emailFrom = $( ".js-email-from" );
+    var emailFromName = $( ".js-email-from-name" );
+    var emailFromAddress = $( ".js-email-from-address" );
     var emailText = $( ".js-email-text" );
     var emailSend = $( ".js-email-send" );
 
+    var loadingMessage = $( ".js-loading-message" );
     var errorMessage = $( ".js-error-message" );
     var successMessage = $( ".js-success-message" );
+    var messages = $( ".js-loading-message, .js-error-message, .js-success-message" );
 
-    // function validateInput() {
-    //   var subject = emailSubject.val().trim();
-    //   var from = emailFrom.val().trim();
-    //   var text = emailText.val().trim();
-    //   if ( subject && from && text ) {
+    var duration = 400;
 
-    //   }
-    // }
+    var dfd = $.Deferred();
 
-    // function createEmailObject() {
-    //   var data = validateInput()
-    //   if ( data ) {
-    //     var email = new Email();
-    //     email.set( "subject", data.subject );
-    //     email.set( "from", data.from );
-    //     email.set( "text", data.text );
-    //     return email;
-    //   }
-    // }
+    function createEmailInstance() {
 
-    function sendEmail() {
-      // var email = createEmailObject();
-      var emailData = {
-        subject: emailSubject.val().trim(),
-        from: emailFrom.val().trim(),
-        text: emailText.val().trim()
-      };
+      emailForm.fadeOut( duration, function(){
+        dfd.resolve();
+      });
 
-      Parse.Cloud.run( "sendEmail", emailData, {
+      var email = new Email();
+      var text = emailText.val().trim();
+      var subject = emailSubject.val().trim();
+      var fromName = emailFromName.val().trim();
+      var fromAddress = emailFromAddress.val().trim();
+
+      if ( text && subject && fromName && fromAddress ) {
+
+        email.set({
+          text: text,
+          subject: subject,
+          fromName: fromName,
+          fromAddress: fromAddress
+        });
+
+        email.save( null, {
+          success: function(){
+            sendEmail( email );
+          },
+          error: sendError
+        });
+
+      } else {
+        sendError();
+      }
+
+    }
+
+    function sendEmail( email ) {
+      Parse.Cloud.run( "sendEmail", email.toJSON(), {
         success: sendSuccess,
         error: sendError
       });
     };
 
-    emailSend.one( "click", sendEmail );
-
     function sendComplete() {
       var dfd = $.Deferred();
-      emailForm.fadeOut( 400, function() {
+      emailForm.fadeOut( duration, function() {
         dfd.resolve();
       });
-      return dfd;
+      return dfd.promise();
     }
 
     function sendSuccess( response ) {
-      sendComplete().then( function() {
-        successMessage.show( 400 );
+      dfd.promise().then( function() {
+        successMessage.fadeIn( duration );
       });
     }
 
     function sendError( response ) {
-      sendComplete().then( function() {
-        errorMessage.fadeIn( 400 );
+      dfd.promise().then( function() {
+        errorMessage.fadeIn( duration );
       });
     }
+
+    emailSend.one( "click", createEmailInstance );
 
   })( jQuery, Parse );
 
