--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: Blog
 ---
 
-<div class="home--info">
+<div class="home--info container">
 
   <h2>
     <span class="name js-name">Nick Bottomley</span>
