--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 ---
 layout: home
-title: Blog
+title: Nick Bottomley
 ---
 
 <div class="home--info container">
 
   <h2>
     <span class="name js-name">Nick Bottomley</span>
-    <span class="tagline js-tagline">Web Developer</span>
+    <span class="tagline js-tagline">Software Developer</span>
   </h2>
 
   <ul class="channel-links js-channel-links">
     <li><a href="/blog">Blog</a></li>
     <li><a href="https://github.com/nickb1080">GitHub</a></li>
     <li><a href="https://twitter.com/nickhbottomley">Twitter</a></li>
-    <!-- <li><a href="#">LinkedIn</a></li> -->
+    <li><a href="#">LinkedIn</a></li>
     <li><a href="/contact">Email</a></li>
   </ul>
 
