--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Nick Bottomley
     <li><a href="/blog">Blog</a></li>
     <li><a href="https://github.com/nickb1080">GitHub</a></li>
     <li><a href="https://twitter.com/nickhbottomley">Twitter</a></li>
-    <!-- <li><a href="#">LinkedIn</a></li> -->
+    <li><a href="#">LinkedIn</a></li>
     <li><a href="/contact">Email</a></li>
   </ul>
 
