--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ title: Contact
   <p class="status-message">I'll get back to you ASAP. In the meantime, check out my <a href="#">blog</a> or my projects on <a href="#">GitHub</a>.</p>
 </div>
 
-<script src="{{ site.baseurl }}public/js/blog.js"></script>
+<script src="{{ site.baseurl }}/public/js/blog.js"></script>
 <script>
 
   ( function( $ ) {
