--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Nick Bottomley
 
   <ul class="channel-links js-channel-links">
     <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-    <li><a href="https://github.com/nickb1080">GitHub</a></li>
+    <li><a href="{{ site.github.home }}">GitHub</a></li>
     <li><a href="https://twitter.com/nickhbottomley">Twitter</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li><a href="/contact">Email</a></li>
