Stub out linkedin link for now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Nick Bottomley
     <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
     <li><a href="{{ site.github.home }}">GitHub</a></li>
     <li><a href="https://twitter.com/nickhbottomley">Twitter</a></li>
-    <li><a href="#">LinkedIn</a></li>
+    <!-- <li><a href="#">LinkedIn</a></li> -->
     <li><a href="/contact">Email</a></li>
   </ul>
 
