Update twitter handle

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@ title: Contact
 
 <div class="response-message error-message js-error-message">
   <div class="status-icon error-icon">&#10008;</div>
-  <p class="status-message">Something went wrong, sorry about that! Try me on <a href="http://twitter.com/nickhbottomley">Twitter</a>.</p>
+  <p class="status-message">Something went wrong, sorry about that! Try me on <a href="http://twitter.com/bttmly">Twitter</a>.</p>
 </div>
 
 <div class="response-message success-message js-success-message">
