Fix links in email cb

--- a/contact.html
+++ b/contact.html
@@ -44,5 +44,5 @@ title: Contact
 
 <div class="response-message success-message js-success-message">
   <div class="status-icon success-icon">&#10004;</div>
-  <p class="status-message">I'll get back to you ASAP. In the meantime, check out my <a href="#">blog</a> or my projects on <a href="#">GitHub</a>.</p>
+  <p class="status-message">I'll get back to you ASAP. In the meantime, check out my <a href="/blog/">blog</a> or my projects on <a href="https://github.com/nickb1080">GitHub</a>.</p>
 </div>
