--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ title: Nick Bottomley
 
   <ul class="channel-links js-channel-links">
     <li><a href="{{ site.baseurl }}/blog/">Blog</a></li>
+    <li><a href="{{ site.baseurl }}/about/">About</a></li>
     <li><a href="{{ site.networks.github }}">GitHub</a></li>
     <li><a href="{{ site.networks.twitter }}">Twitter</a></li>
     <!-- <li><a href="{{ site.networks.linkedin }}">LinkedIn</a></li> -->
